enable preview on all benchs